# hmsdesigner

./: .gitignore  CHANGELOG.MD  MANIFEST.in  README.md  pyproject.toml
configs/: hmsa_aurora.toml  hmsa_eclipse.toml  hmsa_origin.toml  hmsb_old.toml  hmsb_origin.toml
hmsParams/: FGB25.xlsx  FGB7.xlsx  param_dict_save.py
hmspython/: __init__.py
hmspython/Diffraction/: _ImgPredictor.py  _Pixel2wlMapping.py  __init__.py  param_json.py
hmspython/Diffraction/hmsParams/: FGL495.xlsx  FGL590.xlsx
hmspython/Utils/: _Utility.py  __init__.py  _files.py  _time.py  hmsa_aurora.toml  hmsb_old.toml
src/hmsdesigner/: _ImgPredictor.py  _Pixel2wlMapping.py  __init__.py  _utils.py  instrument_params.py  line_predictor.py  param_json.py  pixel_to_wl_map.py
